@@ -1,3 +1,9 @@
+2004-01-24  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* gcc.c (process_command): Don't internationalize the
+	Copyright message.
+	* mips-tfile.c (main): Likewise.
+
 2004-01-24  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* cse.c: (cse_cc_succs) Fix comparison warning.
